--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl-5.6, fileutils (>= 4.0-2.1), file (>= 3.23-1)
+Build-Depends-Indep: perl-5.6, fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
 Standards-Version: 3.5.2.0
 
 Package: debhelper
 Architecture: all
-Depends: ${perl:Depends}, fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0), lynx
-Suggests: dh-make, debconf-utils
+Depends: ${perl:Depends}, fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0), lynx, debconf-utils, binutils
+Suggests: dh-make
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building binary debian packages. Programs
