r466:    * Corrected bashism (echo -e, DAMNIT), in rules file that resulted in a      corrupted Dh_Version.pm. Closes: #97236

--- a/debian/rules
+++ b/debian/rules
@@ -75,7 +75,7 @@ binary-indep: build
 	./dh_installdirs usr/bin usr/share/debhelper \
 		$(PERLLIBDIR)/Debian/Debhelper
 
-	echo -e "package Debian::Debhelper::Dh_Version;\n\$$version='$(VERSION)';" > \
+	printf "package Debian::Debhelper::Dh_Version;\n\$$version='$(VERSION)';" > \
 		debian/debhelper/$(PERLLIBDIR)/Debian/Debhelper/Dh_Version.pm
 
 	find . -perm +111 -maxdepth 1 -type f -not -name "*.pl" \
