r469:    * Missing semi-colon.    * Call dh_shlibdeps as part of build process, as simple guard against      this (dh_* should be called, really).

--- a/debian/rules
+++ b/debian/rules
@@ -91,6 +91,7 @@ binary-indep: build
 	./dh_installman *.1
 	./dh_installinfo
 	./dh_installchangelogs
+	./dh_shlibdeps
 	./dh_link
 	./dh_compress
 	./dh_fixperms
