--- a/debian/rules
+++ b/debian/rules
@@ -17,7 +17,7 @@ export DH_AUTOSCRIPTDIR=autoscripts
 # Use most recent compatability level.
 export DH_COMPAT=3
 
-# Figure out the current debhelper version.
+# Figure out the `current debhelper version.
 VERSION=$(shell expr "`dpkg-parsechangelog 2>/dev/null |grep Version:`" : '.*Version: \(.*\)')
 
 PERLLIBDIR=$(shell perl -MConfig -e 'print $$Config{vendorlib}')
