--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl-5.6, fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
-Standards-Version: 3.5.5.0
+Build-Depends-Indep: perl, fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
+Standards-Version: 3.2.1.0
 
 Package: debhelper
 Architecture: all
