--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl, fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
+Build-Depends-Indep: perl (>= 5.6.1), fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
 Standards-Version: 3.5.6.0
 
 Package: debhelper
