r518:    * dh_movefiles has long been a sore point in debhelper. Inherited      from debstd, its interface and implementation suck, and I have maintained      it while never really deigning to use it. Now there is a remplacment:      dh_install, which ...      - copies files, doesn't move them. Closes: #75360, #82649      - doesn't have that whole annoying debian/package.files vs. debian/files        mess, as it uses debian/install.      - supports copying empty subdirs. Closes: #133037      - doesn't use tar, thus no error reproting problems. Closes: #112538      - files are listed relative to the pwd, debian/tmp need not be used at        all, so no globbing issues. Closes: #100404      - supports -X. Closes: #116902      - the whole concept of moving files out of a directory is gone, so this        bug doesn't really apply. Closes: #120026      - This is exactly what Bill Allombert asked for in #117383, even though I        designed it seemingly independantly. Thank you Bill! Closes: #117383    * Made debhelper's debian/rules a lot simpler by means of the above.    * Updated example rules file to use dh_install. Also some reordering and      other minor changes.    * dh_movefiles is lightly deprecated, and when you run into its bugs and      bad design, you are incouraged to just use dh_install instead.    * dh_fixperms: in v4 only, make all files in bin/ dirs +x. Closes: #119039    * dh_fixperms: in v4 only, make all files in etc/init.d executable (of      course there's -X ..)    * dh_link: in v4 only, finds existing, non-policy-conformant symlinks      and corrects them. This has the side effect of making dh_link idempotent.    * Added a -h/--help option. This seems very obvious, but it never occured to      me before..    * use v4 for building debhelper itself    * v4 mode is done, you may now use it without fear of it changing.      (This idea of this upload is to get v4 into woody so people won't run into      many issues backporting from sarge to woody lat

--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 # I run the most current ones.
 #
 # This is _not_ a good example of a debhelper rules file, but I didn't need
-# to tell you that; just see the 25 lines of inlined perl below.. 
+# to tell you that; just see the chunk of inlined perl below.. 
 # See examples/ for some good examples.
 
 # Ensure that builds are self-hosting, which means I have to use the .pm
@@ -18,9 +18,6 @@ export DH_AUTOSCRIPTDIR=autoscripts
 VERSION=$(shell expr "`dpkg-parsechangelog 2>/dev/null |grep Version:`" : '.*Version: \(.*\)')
 
 PERLLIBDIR=$(shell perl -MConfig -e 'print $$Config{vendorlib}')
-
-# Debug
-#export DH_VERBOSE=1
 
 build: test build-stamp
 build-stamp:
@@ -46,12 +43,15 @@ build-stamp:
 	# Turn all executables into man pages.
 	find . -type f -perm +1 -maxdepth 1 -name "dh_*" \
 		-exec pod2man -c Debhelper -r "$(VERSION)" {} {}.1 \;
+	printf "package Debian::Debhelper::Dh_Version;\n\$$version='$(VERSION)';" > \
+		Debian/Debhelper/Dh_Version.pm
+
 	touch build-stamp
 
 clean:
 	./dh_testdir
 	./dh_testroot
-	-./dh_clean *.1 *-stamp
+	-./dh_clean *.1 *-stamp Debian/Debhelper/Dh_Version.pm
 
 test: test-stamp
 test-stamp:
@@ -69,24 +69,12 @@ binary-indep: build
 	./dh_testdir
 	./dh_testroot
 	./dh_clean -k
-	./dh_installdirs usr/bin usr/share/debhelper \
-		$(PERLLIBDIR)/Debian/Debhelper
-
-	printf "package Debian::Debhelper::Dh_Version;\n\$$version='$(VERSION)';" > \
-		debian/debhelper/$(PERLLIBDIR)/Debian/Debhelper/Dh_Version.pm
-
-	find . -perm +111 -maxdepth 1 -type f -not -name "*.pl" \
-		-exec install -p {} debian/debhelper/usr/bin \;
-	cp -a Debian/Debhelper/*.pm \
-		debian/debhelper/$(PERLLIBDIR)/Debian/Debhelper/
-	cp -a autoscripts debian/debhelper/usr/share/debhelper
-	rm -rf debian/debhelper/usr/share/debhelper/autoscripts/CVS
-
-	./dh_installdocs `find doc -type f | grep -v CVS`
-	./dh_installexamples `find examples -type f | grep -v CVS`
-	./dh_installmenu
+	./dh_install -X .1 dh_* usr/bin
+	./dh_install Debian/Debhelper/*.pm $(PERLLIBDIR)/Debian/Debhelper/
+	./dh_install autoscripts usr/share/debhelper
+	./dh_installdocs doc
+	./dh_installexamples examples/*
 	./dh_installman *.1
-	./dh_installinfo
 	./dh_installchangelogs
 	./dh_shlibdeps
 	./dh_link
