--- a/examples/rules
+++ b/examples/rules
@@ -42,20 +42,21 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-#	dh_installdebconf	
+	dh_installchangelogs
 	dh_installdocs
 	dh_installexamples
-	dh_installmenu
+#	dh_install
+#	dh_installmenu
+#	dh_installdebconf	
 #	dh_installlogrotate
 #	dh_installemacsen
 #	dh_installpam
 #	dh_installmime
 #	dh_installinit
-	dh_installcron
-	dh_installman
-	dh_installinfo
+#	dh_installcron
+#	dh_installinfo
 #	dh_undocumented
-	dh_installchangelogs
+	dh_installman
 	dh_link
 	dh_strip
 	dh_compress
