r522:    * Set DH_ALWAYS_EXCLUDE=CVS and debhelper will exclude CVS directories      from processing by any command that takes a -X option, and dh_builddeb      will also go in and rm -rf any that still sneak into the build tree.    * dh_install: A patch from Eric Dorland <eric@debian.org> adds support for      --sourcedir, which allows debian/package.files files to be moved over to      debian/package.install, and just work. Closes: #146847    * dh_movefiles: don't do file tests in no-act mode. Closes: #144573    * dh_installdebconf: pass --drop-old-templates to debconf-mergetemplate.      Means debhelper has to depend on debconf-utils 1.1.1.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: perl (>= 5.6.1), fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils
+Build-Depends-Indep: perl (>= 5.6.1), fileutils (>= 4.0-2.1), file (>= 3.23-1), debconf-utils (>= 1.1.1)
 Standards-Version: 3.5.6.1
 
 Package: debhelper
