--- a/debian/control
+++ b/debian/control
@@ -14,5 +14,5 @@ Description: helper programs for debian/rules
  automate common tasks related to building debian packages. Programs
  are included to install various files into your package, compress 
  files, fix file permissions, integrate your package with the debian 
- menu system, suidmanager, doc-base, etc. Most debian packages use
- debhelper as part of their build process.
+ menu system, debconf, doc-base, etc. Most debian packages use debhelper
+ as part of their build process.
