r539:    * Remove /usr/doc manglement code from postinst and prerm.      Do not use this verion of debhelper for woody backports!    * Removed dh_installxaw.

--- a/debian/rules
+++ b/debian/rules
@@ -72,7 +72,7 @@ binary-indep: build
 	./dh_install -X .1 dh_* usr/bin
 	./dh_install Debian/Debhelper/*.pm $(PERLLIBDIR)/Debian/Debhelper/
 	./dh_install autoscripts usr/share/debhelper
-	./dh_installdocs doc
+	./dh_installdocs doc/*
 	./dh_installexamples examples/*
 	./dh_installman *.1
 	./dh_installchangelogs
