r567:    * dh_builddeb: Reluctantly call dpkg-deb directly. dpkg cannot pass extra      params to dpkg-deb. Closes: #170330

--- a/debian/rules
+++ b/debian/rules
@@ -84,7 +84,7 @@ binary-indep: build
 	./dh_installdeb
 	./dh_gencontrol
 	./dh_md5sums
-	./dh_builddeb -v
+	./dh_builddeb
 
 # Update the debhelper web page. Not intended for use by anyone except the
 # author.
