r577:    * Rename debhelper.1 to debhelper.7.    * Typo, Closes: #183267

--- a/debian/rules
+++ b/debian/rules
@@ -51,7 +51,7 @@ build-stamp:
 clean:
 	./dh_testdir
 	./dh_testroot
-	-./dh_clean *.1 *-stamp Debian/Debhelper/Dh_Version.pm
+	-./dh_clean *.1 *.7 *-stamp Debian/Debhelper/Dh_Version.pm
 
 test: test-stamp
 test-stamp:
