r581:    * Add calls to dh_installcatalogs to example rules files. Closes: #186819

--- a/examples/rules
+++ b/examples/rules
@@ -50,6 +50,7 @@ binary-arch: build install
 #	dh_installdebconf	
 #	dh_installlogrotate
 #	dh_installemacsen
+#	dh_installcatalogs
 #	dh_installpam
 #	dh_installmime
 #	dh_installinit
