--- a/debian/rules
+++ b/debian/rules
@@ -56,7 +56,7 @@ clean:
 test: test-stamp
 test-stamp:
 	./dh_clean
-	DH_VERSION=10 perl -MTest::Harness -e 'runtests grep { ! /CVS/ } @ARGV' t/*
+	DH_VERSION=10 perl -MTest::Harness -e 'runtests grep { ! /CVS/ && ! /\.svn/ } @ARGV' t/*
 	./dh_clean
 	touch test-stamp
 
