--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Package: debhelper
 Architecture: all
 Depends: ${perl:Depends}, ${misc:Depends}, coreutils | fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.7.0), html2text, debconf-utils (>= 1.1.1), binutils, po-debconf
 Suggests: dh-make
-Conflicts: dpkg-cross
+Conflicts: dpkg-cross (<< 1.18)
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
  automate common tasks related to building debian packages. Programs
