--- a/debian/rules
+++ b/debian/rules
@@ -6,8 +6,8 @@
 # it in to the #LIST# line on the man page fed to it on stdin. Must be passed
 # parameters of all the executables or pod files to get the synopses from.
 # (Like I said, this is not a good example of a debhelper rules file..)
-# For correct conversion of pod tag (like S< >) #LIST# must be substituted in 
-# pod file and not in the troff file
+# For correct conversion of pod tags (like S< >) #LIST# must be substituted in
+# the pod file and not in the troff file.
 MAKEMANLIST=perl -e ' \
 		undef $$/; \
 		foreach (@ARGV) { \
@@ -34,16 +34,12 @@ POD2MAN=pod2man -c Debhelper -r "$(VERSION)"
 
 build: test build-stamp
 build-stamp:
-	# Build all the man pages then generate LIST before convert to man
 	find . -maxdepth 1 -type f -perm +100 -name "dh_*" \
 		-exec $(POD2MAN) {} {}.1 \;
 	cat debhelper.pod | \
 		$(MAKEMANLIST) `find . -maxdepth 1 -type f -perm +100 -name "dh_*" | sort` | \
 		$(POD2MAN) --section=7  > debhelper.7
-	# Translated pages.
-	# Generate translated files .pod from <ll>.po and put them in man/<ll> directories
 	po4a po/po4a.cfg 
-	# Generate dh_*.pod then generate LIST before convert to man
 	set -e; \
 	for dir in man/*; do \
 		lang=`basename $$dir`; \
@@ -64,6 +60,7 @@ clean:
 	./run dh_testdir
 	./run dh_testroot
 	./run dh_clean *.1 *.7 *-stamp Debian/Debhelper/Dh_Version.pm
+	rm -rf man
 
 test: test-stamp
 test-stamp:
