--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends-Indep: po4a (>= 0.23)
 
 Package: debhelper
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, coreutils | fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.13.13), html2text, debconf-utils (>= 1.1.1), binutils, po-debconf
+Depends: ${perl:Depends}, ${misc:Depends}, coreutils | fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.13.13), html2text, binutils, po-debconf
 Suggests: dh-make
 Conflicts: dpkg-cross (<< 1.18)
 Description: helper programs for debian/rules
