--- a/debian/rules
+++ b/debian/rules
@@ -94,6 +94,10 @@ binary-indep: build
 	./run dh_md5sums
 	./run dh_builddeb
 
+# Not intended for use by anyone except the author.
+announcedir:
+	@echo ${HOME}/src/joeywiki/code/debhelper/news
+
 binary-arch:
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
