r1905: * dh_installxfonts: pass --x11r7-layout to update-fonts-* commands to ensure   they use the right new directory. Closes: #362820 * dh_installxfonts: also, alias files have moved from /etc/X11/fonts/* to   /etc/X11/fonts/X11R7/*, update call to update-fonts-alias and the man page   accordingly; packages containing alias files will need to switch to the   new directory on their own. * dh_installudev: correct documentation for --name. Closes: #363028 * Fix broken directory removal code.

--- a/debian/rules
+++ b/debian/rules
@@ -67,7 +67,7 @@ clean:
 	./run dh_clean *.1 *.7 *-stamp Debian/Debhelper/Dh_Version.pm
 	po4a --rm-translations --rm-backups man/po4a/po4a.cfg
 	for lang in $(LANGS); do \
-		rmdir man/$$lang; \
+		if [ -e man/$$lang ]; then rmdir man/$$lang; fi; \
 	done;
 
 test: version test-stamp
