--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: debhelper
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, coreutils | fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.13.13), html2text, binutils, po-debconf
+Depends: ${perl:Depends}, ${misc:Depends}, coreutils, file (>= 3.23-1), dpkg-dev (>= 1.13.13), html2text, binutils, po-debconf
 Suggests: dh-make
 Conflicts: dpkg-cross (<< 1.18)
 Description: helper programs for debian/rules
