--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends-Indep: po4a (>= 0.24)
+Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.7.2
 
 Package: debhelper
