r1940: add svn field

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.7.2
+XS-X-Vcs-Svn: svn://svn.debian.org/svn/debhelper/trunk/
 
 Package: debhelper
 Architecture: all
