--- a/man/po4a/po4a.cfg
+++ b/man/po4a/po4a.cfg
@@ -1,5 +1,6 @@
 [po4a_langs] fr es
 [po4a_paths] man/po4a/po/debhelper.pot 	$lang:man/po4a/po/$lang.po
+[po4a_alias:pod] pod opt_fr:"-L ISO-8859-15 -A UTF-8"
 [type: pod] debhelper.pod	$lang:man/$lang/debhelper.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_builddeb 	$lang:man/$lang/dh_builddeb.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_clean 		$lang:man/$lang/dh_clean.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
