--- a/examples/rules
+++ b/examples/rules
@@ -56,6 +56,8 @@ binary-arch: build install
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
+#	dh_installwm
+#	dh_installudev
 #	dh_undocumented
 	dh_installman
 	dh_link
