--- a/examples/rules
+++ b/examples/rules
@@ -20,8 +20,8 @@ clean:
 	rm -f build-stamp
 
 	# Add here commands to clean up after the build process.
-	#-$(MAKE) clean
-	#-$(MAKE) distclean
+	#$(MAKE) clean
+	#$(MAKE) distclean
 
 	dh_clean
 
