r2037: Vcs- fields are now official

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.7.2
-XS-Vcs-Svn: svn://svn.debian.org/debhelper/trunk/
+Vcs-Svn: svn://svn.debian.org/debhelper/trunk/
 
 Package: debhelper
 Architecture: all
