* Debhelper is now developed in a git repository.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.7.2
-Vcs-Svn: svn://svn.debian.org/debhelper/trunk/
+Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
 
 Package: debhelper
 Architecture: all
