add homepage field

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.7.2
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
+Homepage: http://kitenet.net/~joey/code/debhelper/
 
 Package: debhelper
 Architecture: all
