--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends: po4a (>= 0.24)
-Standards-Version: 3.7.2
+Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
 Homepage: http://kitenet.net/~joey/code/debhelper/
 
 Package: debhelper
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, coreutils, file (>= 3.23-1), dpkg-dev (>= 1.14.15), html2text, binutils, po-debconf
+Depends: ${perl:Depends}, ${misc:Depends}, file (>= 3.23-1), dpkg-dev (>= 1.14.15), html2text, binutils, po-debconf
 Suggests: dh-make
 Conflicts: dpkg-cross (<< 1.18), python-support (<< 0.5.3), python-central (<< 0.5.6)
 Description: helper programs for debian/rules
