--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends: po4a (>= 0.24)
+Build-Depends: po4a (>= 0.24), man-db (>= 2.5.1-1)
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
 Homepage: http://kitenet.net/~joey/code/debhelper/
