* dh_lintian: Finally added this since linda is gone and there's only   lintian to worry about supporting. Closes: #109642, #166320, #206765   (Thanks to Steve M. Robbins for the initial implementation.)

--- a/examples/rules
+++ b/examples/rules
@@ -58,6 +58,7 @@ binary-arch: build install
 #	dh_installinfo
 #	dh_installwm
 #	dh_installudev
+#	dh_lintian
 #	dh_undocumented
 	dh_installman
 	dh_link
